<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_action_back">이전</string>
    <string name="app_feedback_email">barbeaudev@gmail.com</string>
    <string name="app_name">쿠팡 플렉스</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">취소</string>
    <string name="capability_key_delete_assist">capability_key_delete_assist</string>
    <string name="capability_key_inject_time">capability_key_inject_time</string>
    <string name="capability_key_inject_xtra">capability_key_inject_xtra</string>
    <string name="capability_key_nav_messages">capability_key_nav_messages</string>
    <string name="capability_key_nmea">capability_key_nmea</string>
    <string name="capability_key_raw_measurements">capability_key_raw_measurements</string>
    <string name="capability_title_delete_assist">"Delete assist: %1$s
"</string>
    <string name="capability_title_inject_time">"Inject time: %1$s
"</string>
    <string name="capability_title_inject_xtra">"Inject XTRA: %1$s
"</string>
    <string name="capability_title_nav_messages">"Navigation messages: %1$s
"</string>
    <string name="capability_title_nmea">"NMEA: %1$s
"</string>
    <string name="capability_title_raw_measurements">"Raw measurements: %1$s
"</string>
    <string name="capability_value_location_disabled">LOCATION_DISABLED</string>
    <string name="capability_value_not_supported">NOT_SUPPORTED</string>
    <string name="capability_value_supported">SUPPORTED</string>
    <string name="capability_value_unknown">UNKNOWN</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">ba9e45d1bd80468a913914d9bf38ec76</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_upload_picture">사진 첨부하기</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="coumap_message_service_is_running">Service is running</string>
    <string name="coumap_notification_tracking_collect">Coumap notification tracking collect</string>
    <string name="coumap_permission_not_granted">Please grant external storage permission, otherwise memory leaks will not be detected.</string>
    <string name="coumap_permission_notification_text">Click to enable storage permission for %s.</string>
    <string name="coumap_permission_notification_title">Leak detected, need permission</string>
    <string name="coumap_sensors_permission_activity_label">Sensors permission</string>
    <string name="custom_camera_detect_blur">촬영한 사진에 초점이 맞지 않습니다.</string>
    <string name="custom_camera_do_not_have_camera_permission">카메라에 실행에 필요한 권한이 없습니다.</string>
    <string name="custom_camera_fail_to_connect_camera">카메라에 연결할 수 없습니다.</string>
    <string name="custom_camera_next">건너뛰기</string>
    <string name="custom_camera_opencv_install_disagree_message">OpenCV Manager 설치를 동의 후 다시 시도 바랍니다.</string>
    <string name="custom_camera_take_picture">사진촬영</string>
    <string name="custom_camera_taking_picture">스티커 사진</string>
    <string name="deeplink">Deep Link</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_web_client_id">742003781409-h9snj8le0f5ha1gqkh955pildvut546j.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete_aiding_data_command">delete_aiding_data</string>
    <string name="error">오류</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_writing_file">Problem writing to file.</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_to_connect_google_play_service">"구글 플레이 서비스를 이용할 수 없습니다.
오류코드 : "</string>
    <string name="fail_to_get_location">위치정보서비스(GPS)를 설정에서 켜주세요.</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="file_provider_authorities">${applicationId}.fileprovider</string>
    <string name="firebase_database_url">https://coupangflex.firebaseio.com</string>
    <string name="flutter_downloader_notification_canceled">canceled</string>
    <string name="flutter_downloader_notification_channel_description">Display download progress</string>
    <string name="flutter_downloader_notification_channel_name">Downloader</string>
    <string name="flutter_downloader_notification_complete">complete</string>
    <string name="flutter_downloader_notification_failed">failed</string>
    <string name="flutter_downloader_notification_in_progress">in progress</string>
    <string name="flutter_downloader_notification_paused">paused</string>
    <string name="flutter_downloader_notification_started">started</string>
    <string name="force_time_injection_command">force_time_injection</string>
    <string name="force_xtra_injection_command">force_xtra_injection</string>
    <string name="gcm_defaultSenderId">742003781409</string>
    <string name="geo_uri_prefix">geo:</string>
    <string name="geohack_url">https://tools.wmflabs.org/geohack/geohack.php?params=</string>
    <string name="google_api_key">AIzaSyANowU2Mm7V4SDrGsD1gBYOe2sPi2XnNE4</string>
    <string name="google_app_id">1:742003781409:android:b9933ab54507f4c3</string>
    <string name="google_crash_reporting_api_key">AIzaSyANowU2Mm7V4SDrGsD1gBYOe2sPi2XnNE4</string>
    <string name="google_storage_bucket">coupangflex.appspot.com</string>
    <string name="gps_accuracy_value_feet">%1$.1f ft</string>
    <string name="gps_accuracy_value_meters">%1$.1f m</string>
    <string name="gps_altitude_msl_value_feet">%1$.1f ft</string>
    <string name="gps_altitude_msl_value_meters">%1$.1f m</string>
    <string name="gps_altitude_value_feet">%1$.1f ft</string>
    <string name="gps_altitude_value_meters">%1$.1f m</string>
    <string name="gps_azimuth_column_value">%1$.1f°</string>
    <string name="gps_bearing_acc_value">%1$.1f°</string>
    <string name="gps_bearing_value">%1$.1f°</string>
    <string name="gps_elevation_column_value">%1$.1f°</string>
    <string name="gps_hor_and_vert_accuracy_value_feet">%1$.1f/%2$.1f ft</string>
    <string name="retry_if_uncommited_object">사람, 집 안/가게 내부 등이 찍혔다면 재촬영해주세요!</string>
    <string name="retry_take_picture">재촬영</string>
</resources>