<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="56.0dip" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guideBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="116.0dip" />
    <androidx.constraintlayout.widget.Group android:id="@id/previewLayout" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="buttonCameraFlash,cameraPreview,             buttonCancel,buttonCameraShutter" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="end|center" android:id="@id/buttonNext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/custom_camera_next" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="@id/guideTop" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.coupang.delivery.camera.CameraPreview android:id="@id/cameraPreview" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/guideBottom" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guideTop" />
    <ImageView android:id="@id/buttonCameraFlash" android:layout_width="42.0dip" android:layout_height="42.0dip" android:layout_marginTop="60.0dip" android:layout_marginEnd="16.0dip" android:layout_alignParentEnd="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/icon_icon_button_flashoff" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff994d0f" android:gravity="center" android:id="@id/textViewWarningTop" android:background="@drawable/rect_filled_rounded_8dp_yello300" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/retry_if_uncommited_object" android:layout_marginStart="16.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:gravity="center" android:id="@id/buttonPicture" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/select_album" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guideBottom" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/buttonCancel" android:layout_width="60.0dip" android:layout_height="48.0dip" android:text="@string/cancel" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/guideBottom" />
    <Button android:id="@id/buttonCameraShutter" android:background="@drawable/btn_camera_shutter" android:layout_width="60.0dip" android:layout_height="60.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/guideBottom" />
    <androidx.constraintlayout.widget.Group android:id="@id/capturedLayout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="imageBottomGuide,capturedImage,layoutConfirmButtons         ,buttonCameraUndo,buttonCameraAccept,textViewWarning" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/imageBottomGuide" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="116.0dip" />
    <ImageView android:id="@id/capturedImage" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="fitCenter" app:layout_constraintBottom_toBottomOf="@id/imageBottomGuide" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guideTop" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#fff70000" android:gravity="center" android:id="@id/textViewBlurDetection" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/custom_camera_detect_blur" android:shadowColor="#80000000" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" app:layout_constraintBottom_toBottomOf="@id/capturedImage" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/capturedImage" />
    <View android:id="@id/layoutConfirmButtons" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/imageBottomGuide" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff2267ff" android:gravity="center" android:id="@id/buttonCameraUndo" android:background="@drawable/rect_filled_rounded_8dp_white_2267ff_border" android:layout_width="104.0dip" android:layout_height="48.0dip" android:layout_marginBottom="16.0dip" android:text="@string/retry_take_picture" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/buttonCameraAccept" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/buttonCameraAccept" android:background="@drawable/selector_rect_filled_rounded_8dp_primary_blue" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginBottom="16.0dip" android:text="@string/confirm_upload_picture" android:layout_marginStart="8.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/buttonCameraUndo" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff68390e" android:gravity="center_vertical" android:id="@id/textViewWarning" android:background="@drawable/tooltip_9" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry_if_uncommited_object" android:layout_marginStart="16.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintBottom_toTopOf="@id/buttonCameraUndo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
